--- a/README
+++ b/README
@@ -1,5 +1,6 @@
 README
 ------
+(Last updated 5 Sept 2016)
 
 thunar-sendto-clamtk is a simple plugin to allow a right-click,
 context menu scan of files or folders in Thunar, XFCE's file manager.
@@ -22,12 +23,15 @@ Thunar
 
 LINKS
 -----
-
+https://dave-theunsub.github.io/clamtk/
 https://github.com/dave-theunsub/thunar-sendto-clamtk
 https://gitlab.com/dave_m/thunar-sendto-clamtk
 https://bitbucket.org/dave_theunsub/thunar-sendto-clamtk/
 http://thunar.xfce.org
 http://standards.freedesktop.org/desktop-entry-spec/latest/
+
+Screenshot:
+https://i.imgur.com/2l1Ct1h.png
 
 CONTACT
 -------
