--- a/README
+++ b/README
@@ -1,6 +1,6 @@
 README
 ------
-(Last updated 5 Sept 2016)
+(Last updated 29 Sept 2017)
 
 thunar-sendto-clamtk is a simple plugin to allow a right-click,
 context menu scan of files or folders in Thunar, XFCE's file manager.
@@ -26,7 +26,7 @@ LINKS
 https://dave-theunsub.github.io/clamtk/
 https://github.com/dave-theunsub/thunar-sendto-clamtk
 https://gitlab.com/dave_m/thunar-sendto-clamtk
-https://bitbucket.org/dave_theunsub/thunar-sendto-clamtk/
+https://bitbucket.org/davem_/thunar-sendto-clamtk/
 http://thunar.xfce.org
 http://standards.freedesktop.org/desktop-entry-spec/latest/
 
@@ -36,5 +36,5 @@ https://i.imgur.com/2l1Ct1h.png
 CONTACT
 -------
 
-Dave M, dave.nerd AT gmail DOT com
+Dave M, dave.nerd @ gmail .com
 0x6ADA59DE
