add updated language strings in .desktop file

--- a/CHANGES
+++ b/CHANGES
@@ -3,7 +3,8 @@ CHANGES for thunar-sendto-clamtk:
 0.06 - 5 Sep 2016
 ------------------
     * Updated strings: Romanian (ro), English (en_AU),
-        Italian (it), Korean (ko_KR)
+        Italian (it), Korean (ko_KR), Afrikaans (af), English (en_AU),
+        Esperanto (eo), Basque (eu), Punjabi (pa)
     * Updated documentation and links
 
 0.05 - 15 Mar 2014
